# mvp-model-fullstack

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
app/: app.py  ml_predict.py  schemas.py  test_ml_predict.py
app/database/: __init__.py  db_models.py  neo.db
backend/: app.py  ml_predict.py  schemas.py
backend/database/: __init__.py  db_models.py  neo.db
data/: creditcard_2023.csv:Zone.Identifier  model_training.ipynb  neo.csv  neo_to_tests.csv  passenger_satisfaction.csv  pipeline.pkl
database/: __init__.py  avaliacao.db
frontend/: streamlit_app.py
models/: __init__.py  avaliacao.py
schemas/: __init__.py  avaliacao.py  error.py
